# custard

./: .gitignore  .gitmodules  Cargo.toml  ISSUES.md  Justfile  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md  build.rs  housekeeping
.github/workflows/: devskim.yml  housekeeping.yml  rust-clippy.yml  rust.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: cli.rs  consts.rs  main.rs
crates/cli/src/commands/: mod.rs  package_json_path.rs
crates/cli/src/commands/init/: default.rs  git_remote.rs  mod.rs  welcome.rs  write.rs
crates/cli/src/commands/run/: json_vars.rs  list.rs  mod.rs  util.rs
crates/cli/tests/: run.rs
crates/cli/tests/text/: package-json.hello.json  run.json
crates/custard_util/: Cargo.toml
crates/custard_util/src/: lib.rs
crates/package_json/: Cargo.toml
crates/package_json/src/: lib.rs
crates/validate_package_name/: Cargo.toml  README.md
crates/validate_package_name/src/: banned_names.rs  lib.rs
locales/: en.yml
src/: cli.rs  consts.rs  main.rs  package_json.rs  util.rs
src/commands/: init.rs  mod.rs  package_json_path.rs  run.rs  util.rs
src/commands/init/: default.rs  mod.rs
src/commands/run/: list.rs  mod.rs  util.rs
