[package]
name = "custard"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6.2"
dialoguer = "0.10.2"
exitcode = "1.1.2"
eyre = "0.6.8"
fnv = "1.0.7"
node-semver = "2.1.0"
once_cell = "1.15.0"
owo-colors = "3.5.0"
rust-i18n = "0.6.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["fs", "io-std", "io-util", "process", "rt-multi-thread", "macros"] }