[package]
name = "custard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6.2"
colored = "2.0.0"
dialoguer = "0.10.2"
exitcode = "1.1.2"
eyre = "0.6.8"
fnv = "1.0.7"
lazy_static = "1.4.0"
node-semver = "2.1.0"
once_cell = "1.15.0"
regex = "1.6.0"
relm4-macros = "0.4.4"
rust-i18n = "1.0.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
slug = "0.1.4"
spdx = "0.9.0"
tokio = { version = "1.21.2", features = [
    "io-std",
    "io-util",
    "process",
    "rt-multi-thread",
    "macros",
] }
custard_util = { path = "../custard_util" }
package_json = { path = "../package_json" }
git-url = "0.10.1"
git-config = "0.11.0"
bstr = "1.0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
eyre = "0.6.8"
assert_fs = "1.0.7"
serde-value-flatten = { git = "https://github.com/custard-pkg/rust-serde-value-flatten" }
