[package]
name = "package_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custard_util = { version = "0.1.0", path = "../custard_util" }
derivative = "2.2.0"
exitcode = "1.1.2"
eyre = "0.6.8"
fnv = "1.0.7"
lazy_static = "1.4.0"
node-semver = "2.1.0"
once_cell = "1.15.0"
regex = "1.6.0"
rust-i18n = "1.0.1"
serde_json = "1.0.99"
serde = { version = "1.0.158", features = ["derive"] }
serde_with = "2.0.1"
spdx = "0.10.0"
tokio = { version = "1.23.0", features = ["fs"] }
validate_package_name = { version = "0.1.0", path = "../validate_package_name" }
