[package]
name = "validate_package_name"
description = "Validate an npm package name."
version = "0.1.2"
edition = "2021"
keywords = ["npm", "validate-npm", "npm-package", "package-name"]
categories = ["config"]
license = "Apache-2.0"
repository = "https://github.com/custard-pkg/custard/tree/main/crates/validate_package_name"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
urlencoding = "2.1.2"
